--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 body {
     font-family: 'Lucida Console', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+a{
+    list-style: none;
+    text-decoration: none;
+}
 .navbar {
     display: flex; 
     justify-content: center;
@@ -54,14 +58,17 @@ body {
 
 .item li {
     list-style: none;
+    margin-bottom: 12px;
 }
 
 .container-project {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    /* display: flex; */
+    /* flex-wrap: wrap; */
+    grid-template-columns: 1fr 1fr 1fr;
     width: 80vw;
     margin: auto;
-    gap: 70px;
+    gap: 5px;
     margin-top: 50px;
 }
 
@@ -70,9 +77,48 @@ body {
 }
 
 .project-item {
-    width: 30%;
+    /* width: 30%; */
+    position: relative;
 }
+.project-item:hover .overlay {
+    opacity: 1;
+  }
+  
 
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #141c3a;;
+  }
+  .text{
+    padding-top: 48px;
+    text-align: center;
+    display: block;
+    color: white;
+  }
+.btn {
+  background-color: #141c3a;  
+
+  border: 4px solid  darkblue;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 48px;
+}
+.btn:hover {
+    background:  darkblue;
+}
 .project-item img {
     width: 100%;
 }
@@ -99,3 +145,17 @@ hr {
     fill: #fff;
     margin: 20px 20px 0 0;
 }
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    .content {
+        flex-direction: column;
+    }
+    
+.item {
+    width: 100%;
+    margin-top: 20px;
+    text-align: center;
+    padding-bottom: 20px;
+}
+  }
